change width to prevent shift on mobile

--- a/Control.Geocoder.css
+++ b/Control.Geocoder.css
@@ -79,7 +79,7 @@
 }
 
 .leaflet-touch .leaflet-control-geocoder-expanded input, .leaflet-control-geocoder-error {
-	width: 75%;
+	width: 70%;
 	height: 26px;
 	margin: 0 0 0 4px;
 	padding: 0 0 0 4px;
